Fixed broken layout for iOS devices

--- a/pages/result/ResultPage.scss
+++ b/pages/result/ResultPage.scss
@@ -178,7 +178,7 @@
   @media screen and (max-width: 48em) {
     margin: 5vh 0;
     align-items: center;
-    flex: 0;
+    flex: 1;
     width: 100%;
   }
 }
@@ -191,7 +191,7 @@
   flex: 1 1 0;
 
   @media screen and (max-width: 48em) {
-    flex: 0;
+    flex: 1;
   }
 }
 
